<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundoverde"
    tools:context=".TelaCadastroTime">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            app:title="@string/ftc_cadastro_time"
            app:titleTextColor="@android:color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nome_text_input"
            style="@style/Widget.Futcamps.TextInputLayout"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_margin="4dp"
            android:hint="@string/ftc_hint_nome"
            android:layout_gravity="center"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nome_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:maxLines="1"
                android:textColor="@android:color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dirigente_text_input"
            style="@style/Widget.Futcamps.TextInputLayout"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_margin="4dp"
            android:hint="@string/ftc_hint_responsavel"
            app:errorEnabled="true"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dirigente_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:maxLines="1"
                android:textColor="@android:color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cidade_text_input"
            style="@style/Widget.Futcamps.TextInputLayout"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_margin="4dp"
            android:hint="@string/ftc_hint_cidade"
            android:layout_gravity="center"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cidade_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:maxLines="1"
                android:textColor="@android:color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <Switch
            android:id="@+id/sw_cabecaDeChave"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:text="@string/cabe_a_de_chave"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/salvar_button"
            style="@style/Widget.Futcamps.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ftc_salvar"
            android:textSize="18sp"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.57" />
    </LinearLayout>
</ScrollView>